--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,46 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>FastConverter</title>
+
+    <title>FastConverter | Instant PDF Conversion</title>
+    <meta name="title" content="FastConverter | Instant PDF Conversion" />
+    <meta
+      name="description"
+      content="Convert DOCX, XLSX, and Images to PDF instantly with pixel-perfect precision. Secure, server-side conversion powered by Docker."
+    />
+
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://file-converter-rho.vercel.app/" />
+    <meta
+      property="og:title"
+      content="FastConverter | Instant PDF Conversion"
+    />
+    <meta
+      property="og:description"
+      content="Convert DOCX, XLSX, and Images to PDF instantly with pixel-perfect precision. Secure, server-side conversion powered by Docker."
+    />
+    <meta
+      property="og:image"
+      content="https://file-converter-rho.vercel.app/fileconverter.png"
+    />
+
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta
+      property="twitter:url"
+      content="https://file-converter-rho.vercel.app/"
+    />
+    <meta
+      property="twitter:title"
+      content="FastConverter | Instant PDF Conversion"
+    />
+    <meta
+      property="twitter:description"
+      content="Convert DOCX, XLSX, and Images to PDF instantly with pixel-perfect precision. Secure, server-side conversion powered by Docker."
+    />
+    <meta
+      property="twitter:image"
+      content="https://file-converter-rho.vercel.app/fileconverter.png"
+    />
   </head>
   <body>
     <div id="root"></div>
